service-updated.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-service
spec:
  selector:
    app: todolist
  ports:
  - port: 8000
    targetPort: 8000
